<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/teal_200">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"

            android:background="@color/material_dynamic_neutral100"
            android:elevation="4dp"

            android:theme="@style/ThemeOverlay.AppCompat.DayNight"
            app:popupTheme="@style/Theme.AppCompat.Light"
            />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardUseCompatPadding="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:srcCompat="@drawable/batik2"
                android:scaleType="fitXY"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentStart="true"

                app:srcCompat="@drawable/ic_baseline_arrow_back_24"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:srcCompat="@drawable/ic_baseline_favorite_border_24"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="365dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:paddingStart="10dp"
                    android:text="BATIK IPNU IPPNU"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        app:srcCompat="@drawable/ic_baseline_star_rate_24" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        app:srcCompat="@drawable/ic_baseline_star_rate_24" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        app:srcCompat="@drawable/ic_baseline_star_rate_24" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        app:srcCompat="@drawable/ic_baseline_star_rate_24" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        app:srcCompat="@drawable/ic_baseline_star_half_24" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="3dp"
                        android:layout_weight="1"
                        android:text="4.9"
                        android:textColor="@color/black" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/deskripsi"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/details"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/nb"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@string/price"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:text="@string/Harga"
                            android:textColor="@color/black"
                            android:textSize="24sp" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/button"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="15dp"
                        android:layout_weight="0.5"
                        android:background="#FF018786"
                        android:text="Chat Admin"
                        android:textAllCaps="false" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>